# DVC_ReproDemo

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
notebooks/: 1. Titanic_EDA.ipynb  2. Titanic_Refactored.ipynb
stages/: evaluate.py  load_data.py  preprocess_data.py  train.py
