[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Module7"
version = "0.0.1"
description = "This proyect pretends to explain the whole process when creating reproducible experiments with dvc using the Titanic dataset"
authors = [
  { name = "Rich-VH" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Module7"]
force_sort_within_sections = true
